--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -484,24 +484,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def compute_score_paragraph(paragraph, weighted_topic, total_weight, nasari_vectors):\n",
-    "    synsets_sentence = []\n",
+    "    synsets_paragraph = []\n",
     "    score_paragraph = 0\n",
     "    i = 0\n",
     "    for word in paragraph:\n",
     "        best_sense = simplified_lesk_for_paragraphs_word(word, set([tupla[0] for tupla in weighted_topic]), nasari_vectors)\n",
     "        if best_sense is not None:\n",
-    "            synsets_sentence.append(best_sense)\n",
+    "            synsets_paragraph.append(best_sense)\n",
     "        #print(f'[{i}/{len(paragraph)}] {word} -> {synsets_sentence[i]}')\n",
     "        i += 1\n",
     "\n",
-    "    for syn_word in synsets_sentence:\n",
+    "    for syn_word in synsets_paragraph:\n",
     "        score_word = 0\n",
     "        #print(f'[{i}/{len(paragraph)}] {syn_word}')\n",
     "        for (syn_topic,weight) in weighted_topic:\n",
@@ -509,13 +509,13 @@
     "            #print(f'[{i}/{len(paragraph)}] {syn_word} -> {syn_topic} -> {weighted_overlap2(syn_word, syn_topic)*weight}')\n",
     "        score_word /= total_weight #media ponderata\n",
     "        score_paragraph += score_word\n",
-    "    score_paragraph /= len(synsets_sentence)\n",
+    "    score_paragraph /= len(synsets_paragraph)\n",
     "    return score_paragraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,12 +529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
+      "text/plain": [
+       "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
+      ]
      },
      "execution_count": 27,
      "metadata": {},
@@ -556,14 +558,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
+      "text/plain": [
+       "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
+      ]
      },
      "execution_count": 28,
      "metadata": {},
@@ -585,12 +589,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "\"def weighted_overlap(sentence, weighted_context):\\n    numeratore = 0\\n    for word in sentence:\\n        #check if word is in first column of key_words\\n        if word in [x[0] for x in weighted_context]:\\n            #print(f'{word} in key_words')\\n            #get index of word in key_words\\n            index = [x[1] for x in weighted_context if x[0] == word][0]\\n            #print(f'index: {index}')\\n\\n            numeratore += 1/(index)\\n            #print('\\n')\\n       # else:\\n            #print(f'{word} not in key_words')\\n            #print('\\n')\\n\\n    i = 1\\n    denominatore = 0\\n    for word in weighted_context:\\n        denominatore += 1/(2*i)\\n        i += 1\\n\\n    return numeratore/denominatore\""
+      "text/plain": [
+       "\"def weighted_overlap(sentence, weighted_context):\\n    numeratore = 0\\n    for word in sentence:\\n        #check if word is in first column of key_words\\n        if word in [x[0] for x in weighted_context]:\\n            #print(f'{word} in key_words')\\n            #get index of word in key_words\\n            index = [x[1] for x in weighted_context if x[0] == word][0]\\n            #print(f'index: {index}')\\n\\n            numeratore += 1/(index)\\n            #print('\\n')\\n       # else:\\n            #print(f'{word} not in key_words')\\n            #print('\\n')\\n\\n    i = 1\\n    denominatore = 0\\n    for word in weighted_context:\\n        denominatore += 1/(2*i)\\n        i += 1\\n\\n    return numeratore/denominatore\""
+      ]
      },
      "execution_count": 29,
      "metadata": {},
@@ -633,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
